Set up basic slack bot functionality
Utilize  https://us-central1-research-assistant-organizer.cloudfunctions.net/slack/events for the Slack Bolt API

--- a/firebase.json
+++ b/firebase.json
@@ -12,8 +12,8 @@
         "destination": "/index.html"
       },
       {
-        "source": "/api",
-        "function": "api"
+        "source": "/slack",
+        "function": "slack"
       }
     ]
   }
