--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@slack/bolt": "^3.9.0",
     "body-parser": "^1.19.1",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
