--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "twilio": "^3.73.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
