--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "firebase-admin": "^9.8.0",
+    "firebase": "^9.6.5",
+    "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.14.1",
     "twilio": "^3.73.1"
   },
